--- a/package.json
+++ b/package.json
@@ -9,10 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-firebase/app": "^16.7.0",
+    "@react-native-firebase/auth": "^16.7.0",
+    "@react-native-firebase/firestore": "^16.7.0",
+    "@react-native-firebase/storage": "^16.7.0",
+    "@react-native-picker/picker": "^2.4.8",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native-stack": "^6.9.9",
+    "axios": "^1.3.1",
     "expo": "~47.0.12",
+    "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.16.0",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-animatable": "^1.3.3",
+    "react-native-dropdown-select-list": "^2.0.4",
+    "react-native-paper": "^5.1.4",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
